finish auth and add jwt to login

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DB_USERNAME=postgres
-DB_PASSWORD=password
+DB_USERNAME="postgres"
+DB_PASSWORD="admin"
+SECRET_KEY="ini_kunci_rahasia"
+DB_NAME="final_pro_trial"
